# BundesrechnungshofReports

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
.github/workflows/: sync-reports.yml
reports/markdown/1979/: 1979-10-01-bemerkungen-1979-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1980/: 1980-10-01-bemerkungen-1980-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1982/: 1982-10-01-bemerkungen-1982-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1983/: 1983-10-01-bemerkungen-1983-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1984/: 1984-10-01-bemerkungen-1984-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1985/: 1985-10-01-bemerkungen-1985-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1986/: 1986-10-01-bemerkungen-1986-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1987/: 1987-10-01-bemerkungen-1987-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
reports/markdown/1988/: 1988-10-01-bemerkungen-1988-zur-haushalts-und-wirtschaftsf-hrung-des-bundes.md
src/brh_reports/: __init__.py  __main__.py  cli.py  config.py  converter.py  crawler.py  downloader.py  identity.py  models.py  pipeline.py  repository.py
src/bundesrechnungshof_reports.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/state/: processed_reports.json
state/: processed_reports.json
tests/: test_cli.py  test_converter.py  test_crawler.py  test_identity.py  test_repository.py
(+1291 files in other folders)
