[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bundesrechnungshof-reports"
version = "0.1.0"
description = "Automation scaffolding for downloading Bundesrechnungshof PDF reports and converting them to Markdown."
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "playwright>=1.53.0,<2.0.0",
    "pymupdf4llm>=0.0.27,<0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.11.0,<0.12.0",
]

[project.scripts]
brh-reports = "brh_reports.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
